README file update.

--- a/README
+++ b/README
@@ -1,4 +1,9 @@
 
 This is a simple Objective-C wrapper around the Tcl API.
 
+Copyright 2008, Neon Design Technology, Inc.
+Released under the Apache Public License, v. 2.0.
+
 See the demo.nu file for usage.
+
+Tested on Mac OS 10.5 and Ubuntu 7.10.
